fix: sidebar z-index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -243,6 +243,7 @@ header > nav > ul > li > a:hover {
   gap: 1rem;
   transform: translateX(100%);
   transition: transform 0.3s ease;
+  z-index: 999;
 }
 
 .sidebar ul {
